[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/dodge/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/dodge/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/dodge/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/dodge_assets/art/House In a Forest Loop.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/dodge_assets/art/gameover.wav" type="AudioStream" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1280, 0, 0, 0, 0, 0, 1280, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 640, 360 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="body_entered" from="Player" to="." method="_on_Player_body_entered"]
